--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     
-    <link rel="canonical" href="https://jerinjacob1999.github.io/telegram-test/">
+    <link rel="canonical" href="https://jerinjacob1999.github.io/">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
