--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
+      <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="uDM909M4" data-limit="5"></script>
     <p>
     Some text
     </p></div>
