--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-     
+     <div class="elfsight-app-62ce967e-2916-4b90-8d16-73a30328ee40"></div>
     <p>
     Some text
     </p></div>
@@ -31,5 +31,6 @@
   </body>
    <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="uDM909M4" data-limit="5"></script>
   <script async src="https://telegram.org/js/telegram-widget.js?15" data-telegram-discussion="royalwinsureshots" data-comments-limit="5" data-color="13B4C6" data-dark-color="39C4E8"></script>
-  
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
   </html>
