--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
    
     <title>React App</title>
+    <script src="https://togetherjs.com/togetherjs-min.js"></script>
   </head>
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
