--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   
     
   </body>
-   <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="uDM909M4" data-limit="5"></script>
+  <!-- <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="uDM909M4" data-limit="5"></script>
   <script async src="https://telegram.org/js/telegram-widget.js?15" data-telegram-discussion="royalwinsureshots" data-comments-limit="5" data-color="13B4C6" data-dark-color="39C4E8"></script>
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  -->
 
   </html>
