--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
    
     <title>React App</title>
+    <script>
+      var TogetherJSConfig_hubBase = "https://togetherjs-jerin.herokuapp.com/";
+    </script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
   </head>
   <body >
