--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    
     <title>React App</title>
     <script>
-      var TogetherJSConfig_hubBase = "https://togetherjs-jerin.herokuapp.com/";
+      TogetherJSConfig_hubBase = "https://togetherjs-hub.glitch.me/";
     </script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
   </head>
